# pinpoint-c-agent

./: CMakeLists.txt
.github/workflows/: main.yml
DOC/API/: common.h
DOC/PHP/: Readme-CN.md  Readme.md
collector-agent/CollectorAgent/: GrpcSpan.py
common/include/: common.h
common/src/: common.cpp
common/src/ConnectionPool/: SpanConnectionPool.cpp  TransLayer.cpp  TransLayer.h
common/test/: test_common.cc
plugins/PY/pinpoint/common/: Common.py
plugins/PY/pinpoint/libs/amqp/: AMQPConsumerPlugin.py  AMQPPublicPlugin.py
plugins/PY/pinpoint/libs/kombu/: ProducerPlugin.py
plugins/PY/pinpoint/libs/requests/: NextSpanPlugin.py
plugins/PY/pinpoint/libs/urllib/: UrlOpenPlugin.py
src/CPP/: test_pinpoint.c  test_pinpoint.cpp
src/PHP/: pinpoint_php.cpp  pinpoint_php_api.php
src/PHP/tests/: drop_trace_test.phpt  stack_fetal_error.phpt  trace_api_context.phpt  trace_api_with_id.phpt  trace_limit_test-i448.phpt
src/PHP/tests5/: add_root_trace.phpt  app_info_test.phpt  node_test.phpt  stack_fetal_error.phpt  trace_api_context.phpt  trace_api_test.phpt  trace_limit_test.phpt  unique_api_test.phpt
src/PY/: pinpoint_py.c
src/PY/test/: TestPinpoint.py  TestUnderThreadMode.py
testapps/PHP/app/: AppDate.php  NotWatchingAppDate.php
